# PE-Hackathon-Template-2026

./: .env.example  .gitignore  Dockerfile  README.md  alertmanager.yml  alertmanager_rules.yml  create_tables.py  docker-compose.yml  events.csv  gunicorn.conf.py  load_data.py  locustfile.py  prometheus.yml  pyproject.toml  research.ipynb  seed.py  users.csv
.github/workflows/: ci.yml
alertmanager/: alertmanager.yml
app/: __init__.py  cache.py  database.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  urls.py  users.py
app/services/: url_service.py
docs/: api.md  bottleneck-report.md  capacity-plan.md  config.md  decision-log.md  deploy-guide.md  failure-modes.md  runbook.md  scalability.md  troubleshooting.md  verification.md
grafana/provisioning/dashboards/: dashboard.yml  url-shortener.json
nginx/: nginx.conf
prometheus/: alerts.yml  prometheus.yml
seeds/: urls.csv
tests/: conftest.py  test_gold.py  test_integration.py  test_placeholder.py  test_unit.py  test_users.py
