[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "flask-caching>=2.3",
    "peewee>=3.17",
    "prometheus-flask-exporter>=0.23",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "python-json-logger>=3.2",
    "gunicorn>=23.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "locust>=2.29",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
omit = ["tests/*", "load_data.py"]
